style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700;900&display=swap');
*{
    margin: 0;
    padding: 0;
    list-style: none;
    box-sizing: none;
    text-decoration: none;
    scroll-behavior: smooth;
    font-family: 'Poppins', sans-serif;
}

::-webkit-scrollbar{   
    width: 15px;
}

::-webkit-scrollbar-thumb{
    border-radius: 10px;
    background: rgb(2,0,36);
    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(77,77,77,1) 100%);
}

::-webkit-scrollbar-track{
    background-color: #131314;
}

/*Navbar*/
.navbar{
  position: relative;
  padding: 5px;
  border-bottom: 1px solid #00FFFF;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #333333;
}

.navbar-container{
  display: flex;
  margin-right: 20px;
}

.navbar-title{  
  color: white;
  z-index: 3;
}

.navbar-container li{
  margin-left: 30px;
}

.navbar-container li a{
  color: rgb(255, 255, 255);
  font-weight: 50px;
  text-transform: uppercase;
  transition: all 0.5s ease;
}

.navbar-container li a:hover{
  color: #00FFFF;
  text-decoration: underline;
  font-weight: 50px;
  text-transform: uppercase;
}

.navbar-icon{
  display: none;
}

.dropdown{
  display: none;
}


@media screen and (max-width: 800px) {

.navbar-container{
    display: none;
  }
  
.navbar-icon{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 20px;
    transition: all 0.3s ease;
    z-index: 999;
}

.navbar-icon .line{
  margin-right: 20px;
  height: 3px;
  width: 20px;
  background-color: rgb(255, 255, 255);
  transition: all 0.3s ease-in-out;
}

.navbar-icon.active{
  right: 0;
  position: fixed;
  z-index: 999;
}

.navbar-icon.active .line:nth-child(1){
  transform: rotate(45deg) translate(6px, 6px);
}

.navbar-icon.active .line:nth-child(2){
  opacity: 0;
}

.navbar-icon.active .line:nth-child(3){
  transform: rotate(-45deg) translate(6px, -6px);
}

.dropdown{
  display: block;
  position: fixed;
  top: 0;
  flex-direction: column;
  text-align: center;
  width: 100%;
  min-height: 100vh;
  z-index: 2;
  background-color: black;
  transition: all 0.5s ease;
  left: 100%;
}

.dropdown .dropdown-title{
  color: white;
  margin-top: 15px;
  font-size: 2rem;
  line-height: 100px;
}


.dropdown li{
  margin-bottom: 15px;
}

.dropdown li a{
  color: white;
}

.dropdown.active{
  left: 0;
}
}


/*Header*/

#particles-js {
  height: 105vh;
  text-align: center;
  position: relative;
  background-size: cover;
  justify-content: center;
  background-color: #293241;
}

.header{
    top: 25vh; left: 18vh; right: 18vh;
    display: flex;
    position: absolute; 
    text-align: center;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

.header .header-title { 
    cursor: default;
    font-size: 4rem;
    font-family: Arial;
    color: white;
}

  .header-title span {
    display: inline-block;
    transition: all 0.2s ease;
    margin-right: -20px;
  }

  .header-title #space {
    display: inline-block;
    margin-right: -1px;
  }
  
  .header-title span:hover {
    transform: translateY(-11px);
  }

.header .header-sub-title {
    cursor: default;
    margin-bottom: 20px;
    font-family: Helvetica;
    font-size: 2rem;
    color: #00FFFF; 
    transition: all 0.3s ease;
}

.header .header-sub-title:hover {
    transform: scale(1.2);
}

.header .header-description {
    cursor: default;
    font-size: 1.2rem;
    color: white;
    text-shadow: 0px 0.4px #00FFFF;
}

.header-logos{
    display: flex;
    margin-top: 20px;
    width: 150px;
    justify-content: space-evenly;
}

.header-logos i {
    color: white;
    font-size: 2rem;
    transition: all 0.2s ease;
}

.header-logos i:hover{
    color: #00FFFF;
}

.fa-angle-down{
    position: relative;
    top: 25vh;
    color: white;
    font-size: 1.5rem;
    transition: 0.3s ease;
    cursor: pointer;
}

.fa-angle-down:hover {
    transform: translateY(10px);
  }


@media screen and (max-width: 800px){
.header .header-title{
  font-size: 3.5rem;
  line-height: 70px;
  margin-bottom: 20px;
}  
}

@media screen and (max-width: 500px){

#particles-js {
    height: 120vh;
    text-align: center;
    position: relative;
    background-size: cover;
    justify-content: center;
    background-color: #1d1d20;
}

.header{
    top: 15vh; left: 15vh; right: 15vh;
    display: flex;
    position: absolute; 
    text-align: center;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

.header .header-title { 
    cursor: default;
    font-size: 3.3rem;
    font-family: Arial;
    color: white;
    line-height: 60px;

}

.header-title span {
  display: inline-block;
  transition: all 0.2s ease;
  margin-right: -16px;
}

.header .header-sub-title {
  cursor: default;
  margin-bottom: 20px;
  font-family: Helvetica;
  font-size: 1.8rem;
  color: #00FFFF; 
  transition: all 0.3s ease;
}

.header .header-sub-title:hover {
  transform: scale(1.2);
}

.header .header-description {
  cursor: default;
  font-size: 1rem;
  color: white;
  text-shadow: 0px 0.4px #00FFFF;
}

.header-logos{
  display: flex;
  margin-top: 20px;
  width: 150px;
  justify-content: space-evenly;
}

.header-logos i {
  color: white;
  font-size: 2rem;
  transition: all 0.2s ease;
}

.header-logos i:hover{
  color: #00FFFF;
}

.fa-angle-down{
  position: relative;
  top: 10vh;
  color: white;
  font-size: 1.3rem;
  transition: 0.3s ease;
  cursor: pointer;
}

.fa-angle-down:hover {
  transform: translateY(10px);
}
}

/*ABOUT SECTION*/

.about{
  padding: 0 15vh;
  height: 100vh;
  background-color: #F8F8F8;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.about .profile #about-header, #about-sub-header, #about-sub-header-2, #about-description{
  color: black;
}

#about-header{
  position: relative;
  margin-top: -100px;
  font-family:Georgia, 'Times New Roman', Times, serif;
  font-size: 3rem;
}

#about-sub-header{
  position: relative;
  font-size: 1.5rem;
  font-style: italic;
  font-weight: bold;
  line-height: 30px;
}

#about-sub-header-2{
  font-size: 1rem;
  font-style: italic;
  line-height: 20px;
}

.profile p{
  text-indent: 10px;
}

.first{
  line-height: 30px;
}

hr{
  margin-right: 90vh;
}

.about .profile-image {
  position: relative;
  float: right;
  max-width: 100%;
  max-height: 100%;
  height: auto; 
  width: 200px;
  margin-right: 120px;
  padding-left: 1rem;
}


@media screen and (max-width:600px){
  .about .profile-image{
    position: relative; 
    right: 0;
  }
}

.about .profile-image img{
  height: 310px;
  width: 200px;
  max-width: 100%;
  max-height: 100%;
  border-radius: 5%;
  right: 100px;
}

.hidden{
  opacity: 0;
  transform: translateX(-100%);
  transition: all 0.6s ease-out;
}

.hidden2{
  opacity: 0;
  transform: translateX(100%);
  transition: all 0.6s ease-out;
}

.active{
  transform: translateX(0);
  opacity: 1;

}

.fa-location-dot {
  display: inline-block;
  font-size: 40px;
  position: relative;
  animation-name: locdot;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}

@keyframes locdot {
  0%, 100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10px);
  }
}

.wave {
  font-size: 50px;
  animation-name: wave-animation;  
  animation-duration: 2.5s;       
  animation-iteration-count: infinite;  
  transform-origin: 70% 70%;
  display: inline-block;
}

@keyframes wave-animation {
    0% { transform: rotate(-1.0deg) }
    5% { transform: rotate(-4.0deg) }
   10% { transform: rotate(14.0deg) }
   20% { transform: rotate(-8.0deg) }
   30% { transform: rotate(14.0deg) }
   40% { transform: rotate(-4.0deg) }
   50% { transform: rotate(10.0deg) }
   60% { transform: rotate( 0.0deg) }  
  100% { transform: rotate( 0.0deg) }
}

/* Skills section styles */
.skills {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #EE6C4D;
}

.skills-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  max-width: 800px;
}

.skill {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.skill i {
  font-size: 3rem;
  margin-bottom: 10px;
}

/* Projects section styles */
.projects {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #4F86C6;
}

/* Certifications section styles */
.certifications {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #BB4430;
}

/* Contact section styles */
.contact {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #F8F8F8;
}

/* Footer styles */
footer {
  background-color: #333333;
  color: #fff;
  padding: 20px;
  text-align: center;
}

.footer-container {
  max-width: 800px;
  margin: 0 auto;
}

